add opção de pergar somente perguntas do tipo escolha,

--- a/pmsb_web/questionarios/templates/questionarios/escolharequisito_create.html
+++ b/pmsb_web/questionarios/templates/questionarios/escolharequisito_create.html
@@ -62,7 +62,8 @@ $(document).ready(function(){
         $.ajax({
             url: '{% url "questionarios:ajax_get_perguntas_do_questionario" %}',
             data: {
-                "questionario_pk": questionario_id
+                "questionario_pk": questionario_id,
+                "perguntas_escolha":"True"
             },
             dataType: 'json',
             success: function (data) {
