--- a/pmsb_web/questionarios/templates/questionarios/perguntarequisito_delete.html
+++ b/pmsb_web/questionarios/templates/questionarios/perguntarequisito_delete.html
@@ -1,8 +1,8 @@
 {% extends "questionarios/base.html" %}
 
-
 {% block conteudo %}
-<p><h5>Remover Pergunta Requisito: {{object}} de <b>{{object.pergunta}}</b></h5></p>
+<p>Pergunta: <b>{{object.pergunta}}</b></p>
+<p>Pergunta Requisito: <b>{{object.pergunta_requisito}}</b></p>
 
 <form method="post">
     {% csrf_token %}
