--- a/pmsb_web/questionarios/templates/questionarios/delete_pergunta_do_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/delete_pergunta_do_questionario.html
@@ -16,4 +16,12 @@
         </form>
     </div>
 </div>
+
+
+<div class="row">
+    <div class="col-lg-12">
+        {% include "includes/related_objects.html" with obj=object %}
+    </div>
+</div>
+    
 {% endblock conteudo %}
