--- a/pmsb_web/questionarios/templates/questionarios/delete_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/delete_questionario.html
@@ -2,15 +2,25 @@
 
 
 {% block conteudo %}
-<p><h5>Questionario: {{questionario.nome}}, id: {{questionario.id}}</h5></p>
+<div class="row">
+    <div class="col-lg-12">
+        <p><h5>Questionario: {{questionario.nome}}, id: {{questionario.id}}</h5></p>
 
-confirme a ação informando o id do questionario
+        confirme a ação informando o id do questionario
+        
+        <form method="post">
+            {% csrf_token %}
+            {% include "includes/form.html" with form=form %}
+            <button type="submit" class="btn btn-danger">Apagar</button>
+            <a href="{% url "questionarios:list" %}" class="btn btn-primary">Cancelar</a>
+        </form>
+    </div>
+</div>
 
-<form method="post">
-    {% csrf_token %}
-    {% include "includes/form.html" with form=form %}
-    <button type="submit" class="btn btn-danger">Apagar</button>
-    <a href="{% url "questionarios:list" %}" class="btn btn-primary">Cancelar</a>
-</form>
+<div class="row">
+    <div class="col-lg-12">
+        {% include "includes/related_objects.html" with obj=questionario %}
+    </div>
+</div>
 
 {% endblock %}
