--- a/pmsb_web/questionarios/templates/questionarios/base.html
+++ b/pmsb_web/questionarios/templates/questionarios/base.html
@@ -1,14 +1,9 @@
 {% extends "dashboard/index.html" %}
 {% block main %}
 <style>
-    #conteudo_questionarios .row{
+    #questionarios .row {
         margin-top: 20px;
         margin-bottom: 20px;
-    }
-
-    #conteudo_questionarios
-    {
-        margin-bottom: 70px;
     }
 </style>
 
@@ -32,7 +27,7 @@
         <h2 style="text-align: center;">{% block card_titulo %} Questionarios {% endblock %}</h2>
     </div>
 
-    <div id="conteudo_questionarios" class="row">
+    <div class="row" style="margin-bottom: 70px;">
         <div class="col-lg-10 offset-lg-1">
             {% block conteudo%}
             super
