--- a/pmsb_web/questionarios/templates/questionarios/list_questionario.html
+++ b/pmsb_web/questionarios/templates/questionarios/list_questionario.html
@@ -26,7 +26,7 @@
     </p>
     
     <ul class="list-group">
-        {% for pergunta_do_questionario in questionario.perguntas_do_questionario %}
+        {% for pergunta_do_questionario in questionario.perguntas_ordenadas %}
         <li class="list-group-item">
             {{pergunta_do_questionario.ordem}} - {{pergunta_do_questionario.pergunta.variavel}}
             <a href="{% url "questionarios:update_pergunta" pergunta_do_questionario.id %}"><span class="badge badge-secondary">Editar</span></a> 
