--- a/pmsb_web/conta/templates/conta/registrar.html
+++ b/pmsb_web/conta/templates/conta/registrar.html
@@ -1,27 +1,53 @@
 {% extends 'conta/base.html' %} {% block body %}
-<body class="app flex-row align-items-center fullscreen_bg">
-<div class='container' style="margin-top: 5px">
-    <form action="{% url 'conta:registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="card mx-4">
-                        <div class="card-body p-4">
-                            <h2 style="text-align: center;">Cadastro para acesso ao projeto</h2>
-                            <p class="text-muted" style="text-align: center;">Crie a sua conta</p>
-                            {% if formulario_User.errors %}
-                            {% for key,value in formulario_User.errors.items  %}
-                               <p style="text-align: center; color: red;" >{{value}}</p>
-                            {% endfor %}
-                            {% endif %} {{ formulario_User.as_p }}
-                            <br>
-                            <button type="submit" id='myForm' class="btn btn-lg btn-block btn-outline-primary">Enviar dados para análise</button>
+
+<body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">PMSB - TO</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+            </ul>
+            <form action="{% url 'conta:login' %}" onsubmit="remover_mascaras(this)" method="POST" class="form-inline my-2 my-lg-0">
+                {% csrf_token %}
+                <input type="text" name="username" id="cpf" class="form-control mr-sm-2 cpf -mask" placeholder="CPF"
+                    required>
+                <input class="form-control mr-sm-2" type="password" name="password" placeholder="Senha" required>
+                <button class="btn btn-outline-success btn-pill mr-sm-2" type="submit">Entrar</button>
+                <a href="{% url 'conta:registrar' %}" class="btn btn-outline-primary btn-pill" role="button">
+                    Cadastre-se aqui.
+                </a>
+            </form>
+        </div>
+    </nav>
+    <div class="app-body">
+        <div class='container'>
+            <form action="{% url 'conta:registrar' %}" onsubmit="remover_mascaras(this)" method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
+                            <div class="card mx-4">
+                                <div class="card-body p-4">
+                                    <h2 style="text-align: center;">Cadastro para acesso ao projeto</h2>
+                                    <p class="text-muted" style="text-align: center;">Crie a sua conta</p>
+                                    {% if formulario_User.errors %}
+                                    {% for key,value in formulario_User.errors.items %}
+                                    <p style="text-align: center; color: red;">{{value}}</p>
+                                    {% endfor %}
+                                    {% endif %} {{ formulario_User.as_p }}
+                                    <br>
+                                    <button type="submit" id='myForm' class="btn btn-lg btn-block btn-outline-primary">Enviar
+                                        dados para análise</button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </form>
         </div>
-    </form>
-</div>
+    </div>
+</body>
 {% endblock %}
