--- a/pmsb_web/conta/templates/dashboard/index.html
+++ b/pmsb_web/conta/templates/dashboard/index.html
@@ -1,48 +1,63 @@
 {% extends "conta/base.html" %} {% block body %}
 
 <body class="app header-fixed sidebar-fixed aside-menu-fixed sidebar-lg-show">
-  <header class="app-header navbar fullscreen_bg">
-    <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <ul class="nav navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        {% if user.foto %}
-        <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-          <img class="img-avatar" src="{{MEDIA}}{{request.user.foto.url}}" alt="">
-        </a>
-        {% else %}
-        <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-          <img class="img-avatar" src="media/default.png" alt="">
-        </a>
-        {% endif %}
-        <div class="dropdown-menu dropdown-menu-right">
-          <div class="dropdown-header text-center">
-            <strong>Usuário</strong>
-          </div>
-          <a class="dropdown-item" href="{% url 'conta:user_dados'  %}">
-            <i class="fa icon-user"></i> Conta
+    <header class="app-header navbar ">
+      <button class="navbar-toggler sidebar-toggler d-lg-none mr-auto" type="button" data-toggle="sidebar-show">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand" href="#">PMSB - TO
+        <!-- <img class="navbar-brand-full" src="img/brand/logo.svg" width="89" height="25" alt="CoreUI Logo">
+        <img class="navbar-brand-minimized" src="img/brand/sygnet.svg" width="30" height="30" alt="CoreUI Logo"> -->
+      </a>
+      <button class="navbar-toggler sidebar-toggler d-md-down-none" type="button" data-toggle="sidebar-lg-show">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item dropdown d-md-down-none">
+    
+        </li>
+        <li class="nav-item dropdown">
+          {% if user.foto %}
+          <a href="#" class="nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+            {{user.first_name}}
+            <img class="img-avatar" src="{{MEDIA}}{{request.user.foto.url}}" alt="">
+            &#9660;
           </a>
-          <a class="dropdown-item" href="{% url 'conta:perfil_list' %}">
-            <i class="fa icon-user"></i> Perfil
+          {% else %}
+          <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
+            {{user.first_name}}
+            <img class="img-avatar" src="media/default.png" alt="">
+            &#9660;
           </a>
-          <div class="dropdown-header text-center">
-            <strong>Tarefas</strong>
+          {% endif %}
+          <div class="dropdown-menu dropdown-menu-right">
+            <div class="dropdown-header text-center">
+              <strong>Usuário</strong>
+            </div>
+            <a class="dropdown-item" href="{% url 'conta:user_dados'  %}">
+              <i class="fa icon-user"></i> Conta
+            </a>
+            <a class="dropdown-item" href="{% url 'conta:perfil_list' %}">
+              <i class="fa icon-user"></i> Perfil
+            </a>
+            <div class="dropdown-header text-center">
+              <strong>Tarefas</strong>
+            </div>
+            <a class="dropdown-item" href="{% url 'pinax_messages:inbox' %}">
+              <i class="fa fa-tasks"></i> Tarefas
+            </a>
+            <div class="dropdown-header text-center">
+              <strong>Configurações</strong>
+            </div>
+            <div class="divider"></div>
+            <a class="dropdown-item" href="{% url 'conta:logout' %}">
+              <i class="icon-logout"></i> Sair</a>
           </div>
-          <a class="dropdown-item" href="{% url 'pinax_messages:inbox' %}">
-            <i class="fa fa-tasks"></i> Tarefas
-          </a>
-          <div class="dropdown-header text-center">
-            <strong>Configurações</strong>
-          </div>
-          <div class="divider"></div>
-          <a class="dropdown-item" href="{% url 'conta:logout' %}">
-            <i class="icon-logout"></i> Sair</a>
-        </div>
-      </li>
-    </ul>
-    </button>
-  </header>
+    
+        </li>
+      </ul>
+    </header>
   <div class="app-body">
     <div class="sidebar">
       <nav class="sidebar-nav ps ps--active-y">
@@ -70,19 +85,19 @@
               {% if 'conta.view_departamento' in perms %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:departamento_tree' %}">
-                  <i class="nav-icon fa fa-building-o"></i>Área</a>
+                  <i class="nav-icon fa fa-building-o" style="margin-left: 15px" ></i>Área</a>
               </li>
               {% endif %}
               {% if 'conta.view_cargo' in perms %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:cargo_tree' %}">
-                  <i class="nav-icon fa fa-address-card"></i>Cargos</a>
+                  <i class="nav-icon fa fa-address-card" style="margin-left: 15px" ></i>Cargos</a>
               </li>
               {% endif %}
               {% if 'conta.view_user' in perms %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'conta:hierarquia_tree' %}">
-                  <i class="nav-icon icon-people"></i>Hierárquia</a>
+                  <i class="nav-icon icon-people" style="margin-left: 15px" ></i>Hierárquia</a>
               </li>
               {% endif %}
             </ul>
@@ -116,6 +131,8 @@
       </nav>
     </div>
     <main class="main">
+      {% block breadcrumb %}
+      {% endblock %}  
       <div class="container-fluid">
         <div class="animated fadeIn">
           {% block main %} {% endblock %}
