--- a/pmsb_web/relatorios/templates/relatorios/delete_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/delete_relatorio.html
@@ -1,4 +1,11 @@
-{% extends "base/base.html" %} {% block conteudo %}
+{% extends "base/base.html" %} 
+{% block conteudo %}
+<div class="row">
+    <div class="col-md-12">
+    <h4>{% block object %}{% endblock object %}</h4>
+    </div>
+</div>
+
 <form action="" method="post">
     {% csrf_token %}
     <div class="card-body p-4">
