--- a/pmsb_web/conta/templates/dashboard/listardados.html
+++ b/pmsb_web/conta/templates/dashboard/listardados.html
@@ -11,7 +11,7 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <img class="rounded-circle" src="{{MEDIA}}{{request.user.foto.url}}" width="100"
-                                        height="100">
+                                        height="100" draggable="false" style="-moz-user-select: none;">
                                 </div>
                                 <div class="col-sm-9">
                                     <h1>{{user.first_name}}</h1>
