--- a/pmsb_web/conta/templates/dashboard/organograma.html
+++ b/pmsb_web/conta/templates/dashboard/organograma.html
@@ -14,7 +14,7 @@
                 </div>
                 {% if not departamentos %}
                     {% if 'conta.view_user' in perms %}
-                    <div class="col-sm">
+                    <!-- <div class="col-sm">
                         <select id="selecao" class="form-control-sm" style="float:right;">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="true">Ações<span class="caret"></span>
@@ -24,7 +24,7 @@
                                 <option value="2">Todos</option>
                             </ul>
                         </select>
-                    </div>
+                    </div> -->
                     {% endif %}
                 {% endif %}
             </div>
