adequacao cor verde no botao
TODO: revisar fake-delete no produto e mostrar produtos da minha equipe

--- a/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
+++ b/pmsb_web/relatorios/templates/relatorios/list_relatorio.html
@@ -6,7 +6,7 @@
             <div class="btn-align"><i class="nav-icon fa icon-note"></i>Produtos</div>
         </div>
         <div class="col-sm">
-            <a class="btn btn-primary" style="float: right;" href="{% url 'relatorios:create_relatorio'%}">
+            <a class="btn btn-success" style="float: right;" href="{% url 'relatorios:create_relatorio'%}">
                 <i class="nav-icon fa icon-note" style="color:white;"></i>Novo Produto</a>
         </div>
     </div>
