--- a/pmsb_web/conta/templates/dashboard/perfil_list.html
+++ b/pmsb_web/conta/templates/dashboard/perfil_list.html
@@ -1,48 +1,65 @@
 {% extends "dashboard/index.html" %} {% block main %}
-<div class="container" style="margin-top: 10px;">
-    <div class="row justify-content-center">
-        <div class="col-md-10">
-            <div class="card mx-4">
-                <div class="card-body p-4">
-                    <h2 style="text-align: center;">Perfil</h2>
-                    <hr>
+    <div class="container" style="margin-top: 10px;">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
+                <div class="card mx-4">
+                    <div class="card-body p-4">
+                        <h2 style="text-align: center;">Perfil</h2>
+                        <hr>
 
-                    <table class="table table-responsive-sm table-striped table-bordered">
-                        <thead>
+                        <table class="table table-responsive-sm table-striped table-bordered">
+                            <thead>
                             <tr>
                                 <th style="text-align:center;">Atributo</th>
+                                <th style="text-align:center;">Valor</th>
                                 <th style="text-align:center;width:50px;">Status</th>
                                 <th style="text-align:center;width:50px;">Ação</th>
                             </tr>
-                        </thead>
-                        <tbody>
+                            </thead>
+                            <tbody>
                             {% for atributo in atributos %}
-                            <tr>
-                                <td>{{atributo.0.nome}}</td>
-                                {% if atributo.1 %}
-                                <td style="text-align:center">
-                                    <span class="badge badge-warning">Preenchido</span>
-                                </td>
-                                <td style="text-align:center" >
-                                    <a class="btn btn-warning" href="{{atributo.0.get_absolute_url}}"><i class="fa fa-edit"></i>editar</a>
-                                </td>
-                                {% else %}
-                                <td style="text-align:center">
-                                    <span class="badge badge-success">Não Preenchido</span>
-                                </td>
-                                <td style="text-align:center">
-                                    <a class="btn btn-success" href="{{atributo.0.get_absolute_url}}"><i class="fa fa-plus"></i>preencher</a>
-                                </td>
-                                {% endif %}
-                            </tr>
+                                <tr>
+                                    <td>{{ atributo.atributo|upper }}</td>
+
+                                    <td>
+                                        {% for v in  atributo.isPreenchido %}
+                                            {% if atributo.atributo.valor %}
+                                            {{ v.valor }}
+                                            {% else %}
+                                                <a href="{{ v.arquivo.url }}">{{ atributo.atributo.nome }}</a>
+
+                                            {% endif %}
+                                        {% endfor %}
+                                    </td>
+
+                                    {% if atributo.isPreenchido %}
+                                        <td style="text-align:center">
+                                            <span class="badge badge-warning">Preenchido</span>
+                                        </td>
+                                        <td style="text-align:center">
+                                            <a class="btn btn-warning"
+                                               href="{{ atributo.atributo.get_absolute_url }}"><i
+                                                    class="fa fa-edit"></i>editar</a>
+                                        </td>
+                                    {% else %}
+                                        <td style="text-align:center">
+                                            <span class="badge badge-success">Não Preenchido</span>
+                                        </td>
+                                        <td style="text-align:center">
+                                            <a class="btn btn-success"
+                                               href="{{ atributo.atributo.get_absolute_url }}"><i
+                                                    class="fa fa-plus"></i>preencher</a>
+                                        </td>
+                                    {% endif %}
+                                </tr>
                             {% endfor %}
-                        </tbody>
-                        {{valor}}
-                    </table>
-                    <a href="{% url 'conta:dashboard' %}" class="btn btn-primary " style="float: right;">Voltar</a>
+                            </tbody>
+                            {{ valor }}
+                        </table>
+                        <a href="{% url 'conta:dashboard' %}" class="btn btn-primary " style="float: right;">Voltar</a>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
