--- a/pmsb_web/conta/templates/dashboard/perfil_form.html
+++ b/pmsb_web/conta/templates/dashboard/perfil_form.html
@@ -6,9 +6,11 @@
       <div class="col-md-10">
         <div class="card mx-4">
           <div class="card-body p-4">
-            <h2 style="text-align: center;">{{args}}</h2>
+            <h2 style="text-align: center;">{{args|upper}}</h2>
             <hr>
-            <p class="text-muted" style="text-align: center;"></p>
+            <p class="text-muted" style="text-align: center;">
+                {{ args.descricao}}
+            </p>
             {% if Erro %}
             <p style="text-align: center; color: red;"> Ocorreu um erro !</p>
             {% endif %} 
@@ -18,6 +20,7 @@
             {% if formDocumento %}
             {{formDocumento.as_p}}
             {% endif %}
+
             <br>
             <button type="submit" class="btn btn-warning ">Confirmar</button>
             <a href="{% url 'conta:perfil_list' %}" class="btn btn-primary " style="float: right;">Voltar</a>
