usa atributo correto para listar perguntas do questionario resolvendo issue #94

--- a/pmsb_web/questionarios/templates/questionarios/list_questionario_equipe.html
+++ b/pmsb_web/questionarios/templates/questionarios/list_questionario_equipe.html
@@ -21,7 +21,7 @@
     <p>{{questionario.usuario}}</p>
 
     <ul id="sortable" class="list-group">
-        {% for pergunta_do_questionario in questionario.perguntas_ordenadas %}
+        {% for pergunta_do_questionario in questionario.perguntas_do_questionario %}
         <li id="{{pergunta_do_questionario.pk}}" class="list-group-item">
             <p>
                 <span id="ordem_{{pergunta_do_questionario.pk}}">{{pergunta_do_questionario.ordem}}</span>
