--- a/pmsb_web/relatorios/templates/relatorios/delete_bloco.html
+++ b/pmsb_web/relatorios/templates/relatorios/delete_bloco.html
@@ -3,7 +3,9 @@
     {% csrf_token %}
     <div class="card-body p-4">
         <h2 style="text-align: center;">Confirmar exclusão do índice {{object.titulo}}</h2>
+        <h6 style="text-align: center;">id: {{ object.pk }}</h6>
         <hr>
+        {% include "includes/form.html" with form=form %}
         <input class="btn btn-danger" type="submit" value="Confirmar exclusão"/>
         <a class="btn btn-primary" style="float:right;" href="{% url 'relatorios:detail_relatorio' object.relatorio.pk %}">Cancelar</a>
     </div>
