--- a/pmsb_web/questionarios/templates/questionarios/pergunta_detail.html
+++ b/pmsb_web/questionarios/templates/questionarios/pergunta_detail.html
@@ -32,21 +32,21 @@
     
         <h5>
             Pergunta Requisito:
-            {% with pergunta=object.pergunta_requisito %}
-            {% if pergunta %}
-            <a href="{% url "questionarios:pergunta_detail" pergunta.pk %}" target="_blank">{{pergunta}}</a>
-            {% else %}
+            {% with perguntas_requisito=object.perguntarequisito_set.all %}
+            {% for requisito in perguntas_requisito %}
+            <a href="{% url "questionarios:pergunta_detail" requisito.pergunta_requisito.pk %}" target="_blank">{{requisito}}</a>,
+            {% empty %}
                 Sem Pergunta Requisito
-            {% endif %}
+            {% endfor %}
             {% endwith %}
         </h5>
         <h5>Escolha Requisito:
-            {% with escolha=object.possivel_escolha_requisito%}
-            {% if escolha %}
-            <a href="{% url "questionarios:pergunta_detail" escolha %}">{{escolha}}</a>
-            {% else %}
+            {% with escolhas=object.escolharequisito_set.all %}
+            {% for escolha in escolhas %}
+            <a href="{% url "questionarios:pergunta_detail" escolha.pergunta.pk %}" target="_blank">{{escolha}}</a>,
+            {% empty %}
                 Sem Escolha Requisito
-            {% endif %}
+            {% endfor %}
             {% endwith %}
         </h5>
     </div>
