muda formato dos links do para executaveis do app, se não tiver app cadastrado mostra mensagem

--- a/pmsb_web/questionarios/templates/questionarios/base.html
+++ b/pmsb_web/questionarios/templates/questionarios/base.html
@@ -1,62 +1,74 @@
 {% extends "dashboard/index.html" %}
 {% load static %}
 {% block main %}
-<style>
-    #questionarios .row {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-</style>
+    <style>
+        #questionarios .row {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+    </style>
 
-<div class="justify-content-center pinax-messages-inbox-container" style="margin-top: 10px;">
-    <div class="card">
+    <div class="justify-content-center pinax-messages-inbox-container" style="margin-top: 10px;">
+        <div class="card">
 
-    <div class="card-header">
-        <div class="row">
-            <div class="col-sm">
-                <div class="btn-align"><i class="nav-icon fa icon-note"></i>Questionarios</div>
+            <div class="card-header">
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="btn-align"><i class="nav-icon fa icon-note"></i>Questionarios</div>
+                    </div>
+
+                    <div class="col-sm">
+                        {% block ul_menu %}
+
+                        {% endblock ul_menu %}
+                    </div>
+                </div>
             </div>
 
-            <div class="col-sm">
-                {% block ul_menu %}
-
-                {% endblock ul_menu%}
+            <div class="card-body">
+                <h2 style="text-align: center;">{% block card_titulo %} Questionarios {% endblock %}</h2>
+                <hr>
             </div>
+
+            <div class="row">
+                <div class="col-lg-10 offset-lg-1">
+                    <div class="alert alert-info">
+                        {% if mobileapp %}
+                            <span>
+                        Aplicativo para celular Android:
+                                {% if mobileapp.android %}
+                                    <a href="{{ mobileapp.android }}">clique para baixar</a>
+                                {% else %}
+                                    em manutenção
+                                {% endif %}
+                        </span>
+                            |
+                            <span>
+                            Aplicativo para celular iOS:
+                                {% if mobileapp.ios %}
+                                    <a href="{{ mobileapp.ios }}">clique para baixar</a>
+                                {% else %}
+                                    em manutenção.
+                                {% endif %}
+                        </span>
+
+                        {% else %}
+                            <span>App Movel em manutenção</span>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="row" style="margin-bottom: 70px;">
+                <div class="col-lg-10 offset-lg-1">
+                    {% block conteudo %}
+                        super
+                    {% endblock %}
+                </div>
+            </div>
+
+
         </div>
     </div>
-
-    <div class="card-body">
-        <h2 style="text-align: center;">{% block card_titulo %} Questionarios {% endblock %}</h2>
-        <hr>
-    </div>
-
-    {% if mobileapp %}
-    <div class="row" >
-        <div class="col-lg-10 offset-lg-1">                        
-            {% if mobileapp.android %}
-            <a href="{{mobileapp.android}}">PMSB-Mobile-Android.apk</a>        
-            {% else %}
-            <span>Não existe app para android</span>
-            {% endif %}
-            |
-            {% if mobileapp.ios %}
-            <a href="{{mobileapp.ios}}">PMSB-Mobile-IOS.ipa</a>        
-            {% else %}
-            <span>Não existe app para ios</span>
-            {% endif %}
-        </div>
-    </div>
-    {% endif %}
-
-    <div class="row" style="margin-bottom: 70px;">
-        <div class="col-lg-10 offset-lg-1">
-            {% block conteudo%}
-            super
-            {% endblock %}                    
-        </div>
-    </div>
-
-
-    </div>
-</div>
 {% endblock %}
