--- a/pmsb_web/questionarios/templates/questionarios/pergunta_update.html
+++ b/pmsb_web/questionarios/templates/questionarios/pergunta_update.html
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg-12">
         <h3>
-            {{object.verbose_name_tipo}}
+            <b>Pergunta Tipo:</b> {{object.verbose_name_tipo}}
         </h3>
         
         <form method="post">
