--- a/pmsb_web/relatorios/templates/relatorios/render_pdf.html
+++ b/pmsb_web/relatorios/templates/relatorios/render_pdf.html
@@ -14,6 +14,6 @@
     </style>
 </head>
 <body>
-<embed src="/media/relatorios/pdfs/{{ relatorio.pk }}.pdf" type="application/pdf" />
+<embed src="{{ pdf_url}}" type="application/pdf" />
 </body>
 </html>
